--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -5,6 +5,7 @@
   --btn-color: #ff930f;
   --font-icon-color: #382526;
   --footer-color: #232323;
+  --medium-color: rgba(255, 245, 245, 0.521);
 }
 * {
   margin: 0px;
@@ -17,17 +18,21 @@ nav {
 .navigations {
   display: flex;
   justify-content: space-between;
-  padding: 1.5rem;
+  padding: 0.5rem;
   margin: 0px 3rem;
   font-size: 0.8rem;
 }
+.logo img {
+  width: 12em;
+  margin: 1rem 0px 0px 1.5rem;
+}
 .menu-content {
   display: flex;
+  margin: 1rem;
 }
 
 .menu-content ul {
   display: flex;
-  margin: 5px;
 }
 .menu-content ul li {
   align-self: center;
@@ -35,13 +40,26 @@ nav {
 }
 .menu-content ul li a {
   text-decoration: none;
-  color: var(--second-color);
+  color: var(--medium-color);
   margin: 0px 10px;
   text-transform: uppercase;
+  transition: color 0.1s ease-in;
 }
 
 .btn {
   height: 100%;
   height: 100%;
-  background: var(--btn-color);
+  background: var(--top-color);
+  color: var(--medium-color);
+  padding: 0.8rem;
+  border: 2px solid rgba(255, 245, 245, 0.281);
+  border-radius: 5px;
+  transition: all 0.1s ease-in;
+}
+.menu-content ul li a:hover {
+  color: var(--second-color);
+}
+.btn:hover {
+  color: var(--second-color);
+  border: 2px solid var(--second-color);
 }
