--- a/assets/CSS/responsive.css
+++ b/assets/CSS/responsive.css
@@ -1,1 +1,19 @@
 /* for mobile and teb  */
+@media screen and (max-width: 768px) {
+  .btn {
+    width: 50%;
+    height: 80%;
+    padding: 0.5em;
+    margin: 0.5em auto;
+  }
+  .menu-content {
+    display: flex;
+    flex-direction: column;
+  }
+  .navigations {
+    margin: 0px 1.5rem;
+  }
+  .main-content {
+    font-size: 0.8em;
+  }
+}
