--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -14,13 +14,18 @@
 }
 nav {
   background: var(--top-color);
+  position: sticky;
 }
 .navigations {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   padding: 0.5rem;
   margin: 0px 3rem;
   font-size: 0.8rem;
+}
+#active {
+  color: var(--main-color);
 }
 .logo img {
   width: 12em;
@@ -28,11 +33,13 @@ nav {
 }
 .menu-content {
   display: flex;
+
   margin: 1rem;
 }
 
 .menu-content ul {
   display: flex;
+  flex-wrap: wrap;
 }
 .menu-content ul li {
   align-self: center;
@@ -48,13 +55,14 @@ nav {
 
 .btn {
   height: 100%;
-  height: 100%;
+
   background: var(--top-color);
   color: var(--medium-color);
   padding: 0.8rem;
   border: 2px solid rgba(255, 245, 245, 0.281);
   border-radius: 5px;
   transition: all 0.1s ease-in;
+  text-transform: uppercase;
 }
 .menu-content ul li a:hover {
   color: var(--second-color);
@@ -62,4 +70,70 @@ nav {
 .btn:hover {
   color: var(--second-color);
   border: 2px solid var(--second-color);
+}
+/* designing main section  */
+.main__area {
+  background: url(../images/bg_header.jpg);
+  height: 60vh;
+  background-position: center;
+  background-size: cover;
+  display: grid;
+}
+.main-content {
+  margin: auto;
+  color: var(--main-color);
+  font-family: cursive;
+}
+.buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-transform: uppercase;
+}
+.main__btn {
+  margin: 1rem 0.5em;
+  border: 2px solid var(--medium-color);
+  padding: 0.8em 3em;
+  text-decoration: none;
+  color: var(--medium-color);
+  transition: all 0.2s;
+}
+#btn2 {
+  background: #ff8c00;
+  font-weight: bolder;
+  color: var(--main-color);
+  border: transparent;
+  transition: background 0.2s;
+}
+#btn2:hover {
+  background: #dd7a02;
+}
+.main__btn:hover {
+  color: var(--main-color);
+}
+/* aboutSkill sections designe  */
+.about-skill {
+  text-align: center;
+}
+.aboutSkill {
+  text-align: center;
+  margin: 3em 0px;
+}
+
+.skills-area {
+  display: flex;
+  flex-wrap: wrap;
+  background: var(--second-color);
+}
+.skill {
+  flex: 1 1 auto;
+  width: 20rem;
+  height: 15rem;
+  margin: 0.5em;
+  text-align: center;
+  padding: 0.5em;
+}
+.skill img {
+  margin: 0px auto;
+  width: 3rem;
 }
